@@ -2,7 +2,6 @@ package service;
 
 import dto.ClienteDTO;
 import dto.ClienteResponseDTO;
-import io.quarkus.hibernate.orm.panache.PanacheQuery;
 import jakarta.enterprise.context.ApplicationScoped;
 import jakarta.transaction.Transactional;
 import jakarta.validation.Valid;
@@ -10,67 +9,54 @@ import model.Cliente;
 import repository.ClienteRepository;
 import jakarta.inject.Inject;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @ApplicationScoped
 public class ClienteServiceimpl implements ClienteService {
 
     @Inject
-    private ClienteRepository ClienteRepository;
+    public ClienteRepository clienteRepository;
 
     @Override
     @Transactional
     public ClienteResponseDTO create(@Valid ClienteDTO dto) {
-        Cliente Cliente = new Cliente();
-        Cliente.setNome(dto.nome());
-        Cliente.setCpf(dto.cpf());
-        Cliente.setEmail(dto.email());
-        Cliente.setSenha(dto.senha());
-        Cliente.setDataNascimento(dto.datanascimento());
+        Cliente cliente = new Cliente();
+        cliente.setCpf(dto.cpf());
 
-
-        ClienteRepository.persist(Cliente);
-        return ClienteResponseDTO.valueOf(Cliente);
+        clienteRepository.persist(cliente);
+        return ClienteResponseDTO.valueOf(cliente);
     }
-    
+
     @Override
     @Transactional
-    public void update(Long id, @Valid ClienteDTO dto) {
-        Cliente Cliente = ClienteRepository.findById(id);
-        if (Cliente == null) {
-            throw new IllegalArgumentException("Cliente não encontrado com o ID: " + id);
+    public void update(Long id, ClienteDTO dto) {
+        Cliente cliente =  clienteRepository.findById(id);
+
+        cliente.setCpf(dto.cpf());
+
         }
-        Cliente.setNome(dto.nome());
-        Cliente.setCpf(dto.cpf());
-        Cliente.setEmail(dto.email());
-        Cliente.setSenha(dto.senha());
-        Cliente.setDataNascimento(dto.datanascimento());
-        }
-    
+
     @Override
     @Transactional
     public void delete(Long id) {
-        Cliente Cliente = ClienteRepository.findById(id);
-        if (Cliente == null) {
-            throw new IllegalArgumentException("Cliente não encontrado com o ID: " + id);
-        }
-        ClienteRepository.delete(Cliente); 
+        clienteRepository.deleteById(id);
     }
-    
 
     @Override
     public ClienteResponseDTO findById(Long id) {
-        Cliente Cliente = ClienteRepository.findById(id);
-        return Cliente != null ? ClienteResponseDTO.valueOf(Cliente) : null;
+        return ClienteResponseDTO.valueOf(clienteRepository.findById(id));
     }
 
     @Override
     public List<ClienteResponseDTO> findAll() {
-        PanacheQuery<Cliente> Clientes = ClienteRepository.findAll();
-        return Clientes.stream()
-                .map(ClienteResponseDTO::valueOf)
-                .collect(Collectors.toList());
+        return clienteRepository
+        .listAll()
+        .stream()
+        .map(e -> ClienteResponseDTO.valueOf(e)).toList();
+    }
+
+    @Override
+    public List<ClienteResponseDTO> findByNome(String nome) {
+        return clienteRepository.findByNome(nome).stream()
+        .map(e -> ClienteResponseDTO.valueOf(e)).toList();
     }
 }
-
-
